sort.basic.shell.AlgShellSort.scala.error
Compilation error:
AlgShellSort:7: error: value =< is not a member of Int
     while (( ((i+j*ecart) =< getNombreValeurs-1 ) || (i+(j-1)*ecart>=0)) && (getValeur(i +j*ecart) =< getValeur(i+(j-1)*ecart))){
                           ^AlgShellSort:7: error: value =< is not a member of Int
     while (( ((i+j*ecart) =< getNombreValeurs-1 ) || (i+(j-1)*ecart>=0)) && (getValeur(i +j*ecart) =< getValeur(i+(j-1)*ecart))){
                                                                                                    ^